[project]
name = "amazon-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint]
ignore = ["E402", "F403", "F405"]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"
asyncio_default_fixture_loop_scope = "session"